--- a/src/front-end/src/assets/css/sb-admin-2.css
+++ b/src/front-end/src/assets/css/sb-admin-2.css
@@ -3213,7 +3213,7 @@ input[type="button"].btn-block {
   font-weight: 400;
   color: #3a3b45;
   text-align: inherit;
-  white-space: nowrap;
+  /*white-space: nowrap;*/
   background-color: transparent;
   border: 0;
 }
